--- a/PixBee_P4_MultiCopter.ioc
+++ b/PixBee_P4_MultiCopter.ioc
@@ -1,13 +1,34 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,Resolution,ContinuousConvMode,DMAContinuousRequests,ScanConvMode
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Resolution=ADC_RESOLUTION_8B
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_144CYCLES
+ADC1.ScanConvMode=ADC_SCAN_ENABLE
+ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
+Dma.ADC1.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.3.Instance=DMA2_Stream0
+Dma.ADC1.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.3.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.3.Mode=DMA_CIRCULAR
+Dma.ADC1.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.3.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.3.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=UART5_RX
 Dma.Request1=UART4_TX
 Dma.Request2=USART2_TX
-Dma.RequestsNb=3
+Dma.Request3=ADC1
+Dma.RequestsNb=4
 Dma.UART4_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.UART4_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.UART4_TX.1.Instance=DMA1_Stream4
@@ -46,64 +67,66 @@ I2C2.Timing=0x00808CD2
 KeepUserPlacement=false
 Mcu.CPN=STM32F732RET6
 Mcu.Family=STM32F7
-Mcu.IP0=CORTEX_M7
-Mcu.IP1=DMA
-Mcu.IP10=TIM8
-Mcu.IP11=TIM12
-Mcu.IP12=TIM14
-Mcu.IP13=UART4
-Mcu.IP14=UART5
-Mcu.IP15=USART2
-Mcu.IP2=I2C1
-Mcu.IP3=I2C2
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=TIM3
-Mcu.IP9=TIM5
-Mcu.IPNb=16
+Mcu.IP0=ADC1
+Mcu.IP1=CORTEX_M7
+Mcu.IP10=TIM5
+Mcu.IP11=TIM8
+Mcu.IP12=TIM12
+Mcu.IP13=TIM14
+Mcu.IP14=UART4
+Mcu.IP15=UART5
+Mcu.IP16=USART2
+Mcu.IP2=DMA
+Mcu.IP3=I2C1
+Mcu.IP4=I2C2
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=TIM3
+Mcu.IPNb=17
 Mcu.Name=STM32F732RETx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PB2
-Mcu.Pin11=PB10
-Mcu.Pin12=PB11
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin15=PC6
-Mcu.Pin16=PC7
-Mcu.Pin17=PC8
-Mcu.Pin18=PC9
-Mcu.Pin19=PA8
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PC10
-Mcu.Pin25=PC11
-Mcu.Pin26=PC12
-Mcu.Pin27=PD2
-Mcu.Pin28=PB3
-Mcu.Pin29=PB4
-Mcu.Pin3=PA1
-Mcu.Pin30=PB5
-Mcu.Pin31=PB8
-Mcu.Pin32=PB9
-Mcu.Pin33=VP_SYS_VS_Systick
-Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM14_VS_no_output1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
-Mcu.PinsNb=38
+Mcu.Pin10=PB1
+Mcu.Pin11=PB2
+Mcu.Pin12=PB10
+Mcu.Pin13=PB11
+Mcu.Pin14=PB14
+Mcu.Pin15=PB15
+Mcu.Pin16=PC6
+Mcu.Pin17=PC7
+Mcu.Pin18=PC8
+Mcu.Pin19=PC9
+Mcu.Pin2=PC2
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA13
+Mcu.Pin24=PA14
+Mcu.Pin25=PC10
+Mcu.Pin26=PC11
+Mcu.Pin27=PC12
+Mcu.Pin28=PD2
+Mcu.Pin29=PB3
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin30=PB4
+Mcu.Pin31=PB5
+Mcu.Pin32=PB8
+Mcu.Pin33=PB9
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM14_VS_no_output1
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F732RETx
@@ -113,6 +136,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Stream0_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream4_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -197,6 +221,8 @@ PC11.Mode=Asynchronous
 PC11.Signal=UART4_RX
 PC12.Mode=Asynchronous
 PC12.Signal=UART5_TX
+PC2.Locked=true
+PC2.Signal=ADCx_IN12
 PC6.Locked=true
 PC6.Signal=S_TIM8_CH1
 PC7.Locked=true
@@ -243,7 +269,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=scripts/afterGenarateCodeAction.sh
 ProjectManager.UAScriptBeforePath=scripts/befGenarateCodeAction.sh
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true,13-MX_TIM1_Init-TIM1-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true,13-MX_TIM1_Init-TIM1-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -297,6 +323,8 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=288000000
 RCC.VCOSAIOutputFreq_Value=384000000
+SH.ADCx_IN12.0=ADC1_IN12,IN12
+SH.ADCx_IN12.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
