--- a/satcon.ioc
+++ b/satcon.ioc
@@ -14,56 +14,57 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
-Dma.ADC1.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.3.Instance=DMA2_Stream0
-Dma.ADC1.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.3.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.3.Mode=DMA_CIRCULAR
-Dma.ADC1.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.3.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.3.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.Request0=UART5_RX
-Dma.Request1=UART4_TX
-Dma.Request2=USART2_TX
-Dma.Request3=ADC1
+Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.2.Instance=DMA2_Stream0
+Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.2.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.2.Mode=DMA_CIRCULAR
+Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.2.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=UART4_TX
+Dma.Request1=USART2_TX
+Dma.Request2=ADC1
+Dma.Request3=USART2_RX
 Dma.RequestsNb=4
-Dma.UART4_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.UART4_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART4_TX.1.Instance=DMA1_Stream4
-Dma.UART4_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART4_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.UART4_TX.1.Mode=DMA_NORMAL
-Dma.UART4_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART4_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.UART4_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.UART5_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.UART5_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART5_RX.0.Instance=DMA1_Stream0
-Dma.UART5_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART5_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.UART5_RX.0.Mode=DMA_NORMAL
-Dma.UART5_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART5_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.UART5_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.UART5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_TX.2.Instance=DMA1_Stream6
-Dma.USART2_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.2.Mode=DMA_NORMAL
-Dma.USART2_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.2.Priority=DMA_PRIORITY_LOW
-Dma.USART2_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART4_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART4_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_TX.0.Instance=DMA1_Stream4
+Dma.UART4_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART4_TX.0.Mode=DMA_NORMAL
+Dma.UART4_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_TX.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.UART4_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_RX.3.Instance=DMA1_Stream5
+Dma.USART2_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.3.Mode=DMA_NORMAL
+Dma.USART2_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.3.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART2_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.1.Instance=DMA1_Stream6
+Dma.USART2_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.1.Mode=DMA_NORMAL
+Dma.USART2_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 I2C1.IPParameters=Timing
 I2C1.Timing=0x00808CD2
-I2C2.IPParameters=Timing
-I2C2.Timing=0x00808CD2
+I2C2.I2C_Speed_Mode=I2C_Fast
+I2C2.IPParameters=Timing,I2C_Speed_Mode
+I2C2.Timing=0x00301739
 KeepUserPlacement=false
 Mcu.CPN=STM32F732RET6
 Mcu.Family=STM32F7
@@ -74,8 +75,7 @@ Mcu.IP11=TIM8
 Mcu.IP12=TIM12
 Mcu.IP13=TIM14
 Mcu.IP14=UART4
-Mcu.IP15=UART5
-Mcu.IP16=USART2
+Mcu.IP15=USART2
 Mcu.IP2=DMA
 Mcu.IP3=I2C1
 Mcu.IP4=I2C2
@@ -84,7 +84,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SYS
 Mcu.IP8=TIM1
 Mcu.IP9=TIM3
-Mcu.IPNb=17
+Mcu.IPNb=16
 Mcu.Name=STM32F732RETx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
@@ -107,35 +107,34 @@ Mcu.Pin23=PA13
 Mcu.Pin24=PA14
 Mcu.Pin25=PC10
 Mcu.Pin26=PC11
-Mcu.Pin27=PC12
-Mcu.Pin28=PD2
-Mcu.Pin29=PB3
+Mcu.Pin27=PD2
+Mcu.Pin28=PB3
+Mcu.Pin29=PB4
 Mcu.Pin3=PA0-WKUP
-Mcu.Pin30=PB4
-Mcu.Pin31=PB5
-Mcu.Pin32=PB8
-Mcu.Pin33=PB9
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM14_VS_no_output1
+Mcu.Pin30=PB5
+Mcu.Pin31=PB8
+Mcu.Pin32=PB9
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM14_VS_no_output1
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
-Mcu.PinsNb=39
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F732RETx
-MxCube.Version=6.12.0
-MxDb.Version=DB.6.0.120
+MxCube.Version=6.14.1
+MxDb.Version=DB.6.0.141
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:4\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream4_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream6_IRQn=true\:15\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream4_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream5_IRQn=true\:2\:0\:true\:false\:true\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI2_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
@@ -149,7 +148,6 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:10\:0\:true\:false\:true\:false\:true\:false
 NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
 NVIC.UART4_IRQn=true\:15\:0\:true\:false\:true\:true\:true\:true
-NVIC.UART5_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Locked=true
@@ -219,8 +217,6 @@ PC10.Signal=UART4_TX
 PC11.Locked=true
 PC11.Mode=Asynchronous
 PC11.Signal=UART4_RX
-PC12.Mode=Asynchronous
-PC12.Signal=UART5_TX
 PC2.Locked=true
 PC2.Signal=ADCx_IN12
 PC6.Locked=true
@@ -232,7 +228,6 @@ PC8.Signal=S_TIM8_CH3
 PC9.Locked=true
 PC9.Signal=S_TIM8_CH4
 PD2.Locked=true
-PD2.Mode=Asynchronous
 PD2.Signal=UART5_RX
 PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -241,6 +236,7 @@ PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -253,23 +249,23 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=PixBee_P4_MultiCopter.ioc
-ProjectManager.ProjectName=PixBee_P4_MultiCopter
+ProjectManager.ProjectFileName=satcon.ioc
+ProjectManager.ProjectName=satcon
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
-ProjectManager.UAScriptAfterPath=scripts/afterGenarateCodeAction.sh
-ProjectManager.UAScriptBeforePath=scripts/befGenarateCodeAction.sh
+ProjectManager.UAScriptAfterPath=scripts\\afterGenarateCodeAction.py
+ProjectManager.UAScriptBeforePath=scripts\\befGenarateCodeAction.py
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_UART5_Init-UART5-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_TIM8_Init-TIM8-false-HAL-true,12-MX_TIM12_Init-TIM12-false-HAL-true,13-MX_TIM1_Init-TIM1-false-HAL-true,14-MX_USART2_UART_Init-USART2-false-HAL-true,15-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM5_Init-TIM5-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM12_Init-TIM12-false-HAL-true,12-MX_TIM1_Init-TIM1-false-HAL-true,13-MX_USART2_UART_Init-USART2-false-HAL-true,14-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV2
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -385,13 +381,7 @@ TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period
 TIM8.Period=3599
 TIM8.Prescaler=5
-UART5.BaudRate=100000
-UART5.IPParameters=RxPinLevelInvertParam,BaudRate,WordLength,Parity,StopBits
-UART5.Parity=PARITY_EVEN
-UART5.RxPinLevelInvertParam=UART_ADVFEATURE_RXINV_ENABLE
-UART5.StopBits=UART_STOPBITS_2
-UART5.WordLength=WORDLENGTH_9B
-USART2.BaudRate=19200
+USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
